objects/emailSend__e.object
<CustomObject>
    <description>send an email.</description>
    <fields>
        <fullName>Asset_Id__c</fullName>
        <description>salesforce asset Id, used for getting the contact and asset name.</description>
        <label>Asset Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <defaultValue>&apos;Fridge Temperature Warning&apos;</defaultValue>
        <description>type of email</description>
        <label>Email Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>template_Id__c</fullName>
        <description>Email Tempate ID.</description>
        <label>template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>emailSend</label>
    <pluralLabel>emailSends</pluralLabel>
</CustomObject>